--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,9 +24,8 @@
 
     <div class="form-group">
         <label for="devoured">Devoured?</label><br>
-        <input type="hidden" name="id" value="{{this.id}}"
-        <button class=" btnColor btn btn-primary" type="submit">Takeaway!</button>
-       
+        <input type="hidden" name="id" value="{{this.id}}" <button class=" btnColor btn btn-primary" type="submit">Takeaway!</button>
+
     </div>
 
     <button type="submit">Add Burger</button>
